--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
 </head>
 <body>
   
+  <!-- Header -->
+  <header class="header">
+    <div class="header__content">
+      <img src="img/header_logo.png" alt="Gola templates" class="header__content-logo">
+      <div class="header__btn">
+        <a href="https://templates.gola.io/" class="header__btn-link">templates.gola.io</a>
+        <img src="img/header_arrow.svg" alt="Link" class="header__btn-icon">
+      </div>
+    </div>
+    <img src="img/header_bg.png" alt="" class="header-bg">
+  </header>
+
 </body>
 </html>
