add welcome, started

--- a/index.html
+++ b/index.html
@@ -22,5 +22,32 @@
     <img src="img/header_bg.png" alt="" class="header-bg">
   </header>
 
+  <!-- Welcome -->
+  <section class="welcome">
+    <div class="global__container">
+      <h2 class="welcome-title">Welcome</h2>
+      <p class="welcome-txt">Thank you for your support. Glad you are here. <br> Here’s is some information to help you getting started with this Figma File.</p>
+    </div>
+  </section>
+
+  <!-- Started -->
+  <section class="started">
+    <div class="global__container">
+      <h2 class="started-title global-title">Getting started</h2>
+      <div class="started__info global__info">
+        <img src="img/info.svg" alt="Info" class="global__info-icon">
+        <div class="started__box">
+          <h4 class="started__box-name">Assets</h4>
+          <p class="started__box-txt">This design is using assets from pages like Unsplash, Pexels or other assets under a free license. You may need to install fonts that aren’t available on Figma. You are free to use all assets mentioned on the licensing page for personal & commercial use.</p>
+          <p class="started__box-txt">Check out the page below for all used assets.</p>
+          <div class="started__box__btn">
+            <a href="https://solveig-template.webflow.io/template-info/licensing" class="started__btn-link">See all assets</a>
+            <img src="img/header_arrow.svg" alt="Arrow" class="started__btn-icon">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
