add webflow, license, footer

--- a/index.html
+++ b/index.html
@@ -49,5 +49,67 @@
     </div>
   </section>
 
+  <!-- Webflow -->
+  <section class="webflow">
+    <div class="global__container">
+      <h2 class="webflow-title">Get FREE Webflow Template</h2>
+      <div class="webflow__box">
+        <img src="img/webflow_icon.png" alt="Webflow" class="webflow__box-icon">
+        <div class="webflow__content">
+          <h4 class="webflow__content-name">FREE Webflow Template</h4>
+          <h5 class="webflow__content-txt">Check out the Webflow Template of this design. </h5>
+        </div>
+        <div class="webflow__btn_zero">
+          <a href="#" class="webflow__btn_zero-link">Live Preview</a>
+          <img src="img/arrow_black.svg" class="webflow__btn_zero-icon">
+        </div>
+        <div class="webflow__btn_blue">
+          <a href="#" class="webflow__btn_blue-link">Get Template</a>
+          <img src="img/arrow_white.svg" class="webflow__btn_blue-icon">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="webflow">
+    <div class="global__container">
+      <h2 class="webflow-title framer-title">Get FREE Framer Template</h2>
+      <div class="webflow__box">
+        <img src="img/framer_icon.png" alt="Framer" class="webflow__box-icon">
+        <div class="webflow__content framer__content">
+          <h4 class="webflow__content-name">FREE Framer Template</h4>
+          <h5 class="webflow__content-txt">Check out the Framer Template of this design.</h5>
+        </div>
+        <div class="webflow__btn_zero">
+          <a href="#" class="webflow__btn_zero-link">Live Preview</a>
+          <img src="img/arrow_black.svg" class="webflow__btn_zero-icon">
+        </div>
+        <div class="webflow__btn_black">
+          <a href="#" class="webflow__btn_blue-link">Get Template</a>
+          <img src="img/arrow_white.svg" class="webflow__btn_blue-icon">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- License -->
+  <section class="license">
+    <div class="global__container">
+      <h2 class="global-title">License</h2>
+      <div class="global__info license__info">
+        <img src="img/info.svg" alt="Info" class="license__info-icon">
+        <p class="license__info-txt">You can utilize this design in an unlimited number of projects, including commercial and personal projects like websites and apps. However, you are not permitted to resell the files, include them in a product or template that you are selling, publish them online, or distribute them for free.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <img src="img/header_logo.png" alt="Gola templates" class="footer-logo">
+    <div class="footer__btn">
+      <a href="#" class="footer__btn-link">templates.gola.io</a>
+      <img src="img/header_arrow.svg" alt="Arrow" class="footer__btn-icon">
+    </div>
+  </footer>
+
 </body>
 </html>
