--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/fonts.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.min.css">
   <title>Gola templates</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="header__content">
       <img src="img/header_logo.png" alt="Gola templates" class="header__content-logo">
       <div class="header__btn">
-        <a href="https://templates.gola.io/" class="header__btn-link">templates.gola.io</a>
+        <a href="https://templates.gola.io/" target="_blank" class="header__btn-link">templates.gola.io</a>
         <img src="img/header_arrow.svg" alt="Link" class="header__btn-icon">
       </div>
     </div>
@@ -41,7 +41,7 @@
           <p class="started__box-txt">This design is using assets from pages like Unsplash, Pexels or other assets under a free license. You may need to install fonts that aren’t available on Figma. You are free to use all assets mentioned on the licensing page for personal & commercial use.</p>
           <p class="started__box-txt">Check out the page below for all used assets.</p>
           <div class="started__box__btn">
-            <a href="https://solveig-template.webflow.io/template-info/licensing" class="started__btn-link">See all assets</a>
+            <a href="https://solveig-template.webflow.io/template-info/licensing" target="_blank" class="started__btn-link">See all assets</a>
             <img src="img/header_arrow.svg" alt="Arrow" class="started__btn-icon">
           </div>
         </div>
@@ -60,11 +60,11 @@
           <h5 class="webflow__content-txt">Check out the Webflow Template of this design. </h5>
         </div>
         <div class="webflow__btn_zero">
-          <a href="#" class="webflow__btn_zero-link">Live Preview</a>
+          <a href="https://templates.gola.io/template/solveig" target="_blank" class="webflow__btn_zero-link">Live Preview</a>
           <img src="img/arrow_black.svg" class="webflow__btn_zero-icon">
         </div>
         <div class="webflow__btn_blue">
-          <a href="#" class="webflow__btn_blue-link">Get Template</a>
+          <a href="https://templates.gola.io/template/solveig" target="_blank" class="webflow__btn_blue-link">Get Template</a>
           <img src="img/arrow_white.svg" class="webflow__btn_blue-icon">
         </div>
       </div>
@@ -80,11 +80,11 @@
           <h5 class="webflow__content-txt">Check out the Framer Template of this design.</h5>
         </div>
         <div class="webflow__btn_zero">
-          <a href="#" class="webflow__btn_zero-link">Live Preview</a>
+          <a href="https://templates.gola.io/template/solveig" target="_blank" class="webflow__btn_zero-link">Live Preview</a>
           <img src="img/arrow_black.svg" class="webflow__btn_zero-icon">
         </div>
         <div class="webflow__btn_black">
-          <a href="#" class="webflow__btn_blue-link">Get Template</a>
+          <a href="https://templates.gola.io/template/solveig" target="_blank" class="webflow__btn_blue-link">Get Template</a>
           <img src="img/arrow_white.svg" class="webflow__btn_blue-icon">
         </div>
       </div>
@@ -106,7 +106,7 @@
   <footer class="footer">
     <img src="img/header_logo.png" alt="Gola templates" class="footer-logo">
     <div class="footer__btn">
-      <a href="#" class="footer__btn-link">templates.gola.io</a>
+      <a href="https://templates.gola.io/" target="_blank" class="footer__btn-link">templates.gola.io</a>
       <img src="img/header_arrow.svg" alt="Arrow" class="footer__btn-icon">
     </div>
   </footer>
